--- a/UART/Makefile
+++ b/UART/Makefile
@@ -9,7 +9,7 @@ MCU =atmega32
 TARGET = main
 SRC = $(TARGET).c
 
-AVRDUDE_PROGRAMMER = dapa
+AVRDUDE_PROGRAMMER = usbasp
 AVRDUDE_PORT = /dev/parport0 
 AVRDUDE_WRITE_FLASH = -U flash:w:$(TARGET).hex
 
@@ -19,7 +19,7 @@ elf:
 hex:
 	$(OBJCOPY) -j .text -j .data -O ihex  $(TARGET).elf $(TARGET).hex
 flash:
-	$(AVRDUDE) -p m32 -P $(AVRDUDE_PORT) -c $(AVRDUDE_PROGRAMMER) $(AVRDUDE_WRITE_FLASH)
+	$(AVRDUDE) -p m32 -c $(AVRDUDE_PROGRAMMER) $(AVRDUDE_WRITE_FLASH)
 clean:
 	$(REMOVE) $(TARGET).hex $(TARGET).elf $(TARGET).c~
 
